# tidybee-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TidyUpSoftware.sln  build.rs  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/: msi.yml
.github/workflows/: actions.yml  docker.yaml  msi.yml  release.yml  rust-clippy.yml  tests.yml
.teamcity/: pom.xml  settings.kts
.teamcity/patches/buildTypes/: Build.kts  BuildTidybeeAgent.kts
.teamcity/patches/vcsRoots/: HttpsGithubComTidyBeeTidybeeBackendRefsHeadsMain1.kts  HttpsGithubComTidyBeeTidybeeBackendRefsHeadsMain2.kts  HttpsGithubComTidyBeeTidybeeBackendRefsHeadsMain3.kts
RestFullMinimalApi/: Program.cs
TidyAPI/: Program.cs  WeatherForecast.cs  appsettings.json
TidyAPI/Controllers/: WeatherForecastController.cs
TidyAPI/Properties/: launchSettings.json
TidyUpSoftware.nUnitTests/: UnitTest1.cs  serviceInterfaceTests.cs
TidyUpSoftware.xUnitTests/: UnitTest1.cs  serviceInterfaceTests.cs
agent/: Cargo.toml  README.md
agent/config/: default.json
agent/src/: main.rs
agent/src/configuration_wrapper/: configuration_wrapper.rs  mod.rs
agent/src/http_server/: http_server.rs  mod.rs  server.rs
agent/src/http_server/routes/: get_files.rs  get_heaviest_files.rs  get_users.rs  hello_world.rs  mod.rs
agent/src/lister/: lister.rs
agent/src/my_files/: my_files.rs
agent/src/options_parser/: options_parser.rs
agent/src/parser/: json_parser.rs  mod.rs
agent/src/tidyalgo/: mod.rs
agent/src/watcher/: watcher.rs
api/Properties/: launchSettings.json
config/: configuration.json  default.json  docker.json  test.json
config/rules/: basic.yml
front/: App.vue  main.js  package-lock.json  package.json  router.js
front/src/components/: HelloWorld.vue
functionnalTests/: README.md  UnitTest1.cs  basicTests.cs  serviceInterfaceTests.cs  templateTests.cs
helloWorld/: Program.cs  tidyupsoftware.csproj
hub/: Dockerfile  Program.cs  README.md  appsettings.json  tidy-hub.sln  tidybee-hub.csproj  tidybee-hub.sln
hub/Controllers/: DashboardController.cs
hub/Models/: FileModel.cs  TidyScoreModel.cs
src/: MyFiles.md  agent_data.rs  agent_uuid.rs  config.rs  configuration.rs  configuration_wrapper.rs  error.rs  file_info.rs  file_lister.rs  file_watcher.rs  http_server.rs  lib.rs  lister.rs  logger.rs  main.rs  my_files.rs  options.rs  server.rs  tidy_algo.rs  utils.rs  watcher.rs
src/agent_data/: agent_data.rs  mod.rs
src/agent_infos/: agent_data.rs  agent_infos.rs  mod.rs
src/configuration_wrapper/: configuration_wrapper.rs  mod.rs
src/file_manager/: mod.rs
src/grpc/proto/: tidybee.proto  tidybee_events.proto
src/http/: grpc.rs  hub.rs  mod.rs  protocol.rs  request.rs  routes.rs
src/http_server/: http_server.rs  mod.rs
src/http_server/routes/: get_files.rs  get_status.rs  get_users.rs  hello_world.rs  mod.rs
src/lister/: lister.rs  mod.rs
src/logger/: logger.rs  mod.rs
src/my_files/: MyFiles.md  mod.rs  my_files.rs
src/options_parser/: mod.rs  options_parser.rs
src/tidy_algo/: mod.rs  tidy_algo.rs
src/tidy_algo/tidy_rules/: duplicated.rs  misnamed.rs  missnamed.rs  mod.rs  perished.rs
src/tidy_rules/: duplicated.rs  misnamed.rs  mod.rs  perished.rs  tidy_algo.rs
src/watcher/: mod.rs  watcher.rs
tests/assets/rules_folder/: basic.yml  invalid.yml
tests/assets/test_folder/: masterfile  test-file-1  (+9 more)
tls/cert_gen/: certificate_auth_resource.tf  server_cert_resource.tf
unitaryTests/: README.md  basicTests.cs  serviceInterfaceTests.cs  templateTests.cs
wix/: bootstrapper.wxs  main.wxs  tests.wxs
(+327 files in other folders)
