[package]
name = "tidybee-agent"
version = "0.1.0"
edition = "2021"
authors = ["majent4", "Cavonstavant", "Ju"]

[dependencies]
axum = { version = "0.7.4", features = ["macros", "ws"] }
chrono = "0.4.31"
config = "0.13.3"
crossbeam-channel = "0.5.8"
env_logger = "0.11.0"
gethostname = "0.4.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
regex = "1.10.3"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_derive = "1.0.8"
serde_json = "1.0.106"
sysinfo = "0.30.5"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }
reqwest = { version = "0.11.24", features = ["json"] }

[dev-dependencies]
ctor = "0.2.5"

[[bin]]
name = "tidybee-agent"
path = "src/main.rs"
