[package]
name = "tidybee-agent"
version = "0.1.0"
edition = "2021"
authors = ["majent4"]

[dependencies]
notify = "6.1.1"
clap = "2.33"
notify-debouncer-full = "0.3.1"
crossbeam-channel = "0.5.8"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
